--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,8 +10,8 @@
         <meta name="author" content="Cloudwick Sync">
 
         <link rel="icon" type="image/ico" href="@routes.Assets.versioned("images/favicon.ico")">
-        <link rel="stylesheet" href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")'>
-        <link rel="stylesheet" href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap-theme.css")'>
+        <link rel="stylesheet" href='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.css"))'>
+        <link rel="stylesheet" href='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap-theme.css"))'>
         <link rel="stylesheet" media="screen" href='@routes.Assets.versioned("stylesheets/main.css")'>
     </head>
 
@@ -36,6 +36,6 @@
         </div>
     </body>
 
-    <script src='@routes.Assets.versioned("lib/jquery/jquery.js")' type="text/javascript"></script>
-    <script src='@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")' type="text/javascript"></script>
+    <script src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.js"))' type="text/javascript"></script>
+    <script src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.js"))' type="text/javascript"></script>
 </html>
