--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, user: Option[models.User] = None)(content: Html)(implicit messages: Messages)
 <!DOCTYPE html>
 <html>
     <head>
@@ -22,6 +22,14 @@
                 <div class="collapse navbar-collapse">
                   <ul class="nav navbar-nav">
                     <li><a href="/users">Users</a></li>
+                  </ul>
+                  <ul class="nav navbar-nav navbar-right">
+                    @user.map { u =>
+                      <li><a href="@routes.Application.index">@u.fullName</a></li>
+                      <li><a href="@routes.Application.signOut">@Messages("sign.out")</a></li>
+                    }.getOrElse {
+                      <li><a href="@routes.Application.signIn">@Messages("sign.in")</a></li>
+                    }
                   </ul>
                 </div>
             </div> <!-- container -->
