--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -1,16 +1,6 @@
-@(users: Seq[User], form: Form[(String, String, Int, Boolean)])(implicit messages: play.api.i18n.Messages, flash: Flash)
+@(user: User, users: Seq[User])(implicit messages: Messages)
 
-@import partials.alert
-
-@implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-2", "col-md-10") }
-
-@main(title = "Users") {
-
-  @defining(flash.get("message")) { message =>
-    @if(message.isDefined) {
-      @alert("info", "Success")(message.get)
-    }
-  }
+@main(Messages("users.title"), Some(user)) {
 
   <div class="container theme-showcase" role="main">
     <h1>Existing Users:</h1>
@@ -21,14 +11,6 @@
     </ul>
 
     <hr>
-
-    <h1>Add New User:</h1>
-    @b3.form(routes.UserController.createUser) {
-      @b3.text(form("firstName"), '_label -> "First Name")
-      @b3.text(form("lastName"), '_label -> "Last Name")
-      @b3.number(form("age"), '_label -> "Age")
-      @b3.checkbox(form("active"), '_text -> "Active User?", 'value -> true)
-      @b3.submit('class -> "btn btn-default"){ Create User }
-    }
   </div>
+
 }
