Add Tests for Application and Controllers
DMR-133 #resolve

--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -1,6 +1,6 @@
 @(user: User, users: Seq[User])(implicit messages: Messages)
 
-@main(Messages("users.title"), Some(user)) {
+@main(Messages("Cloudwick One - Users"), Some(user)) {
 
   <div class="container theme-showcase" role="main">
     <h1>Existing Users:</h1>
