--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -1,6 +1,6 @@
 @(user: models.User)(implicit messages: Messages)
 
-@main(Messages("home.title"), Some(user)) {
+@main(Messages("Cloudwick One"), Some(user)) {
   <div class="user col-md-6 col-md-offset-3">
     <div class="row">
       <hr class="col-md-12" />
