--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Cloudwick One</title>
+        <title>@title</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Cloudwick One">
