--- a/app/views/signIn.scala.html
+++ b/app/views/signIn.scala.html
@@ -1,6 +1,6 @@
 @(socialProviders: com.mohiva.play.silhouette.impl.providers.SocialProviderRegistry)(implicit request: RequestHeader, messages: Messages)
 
-@main(Messages("sign.in.title")) {
+@main(Messages("Cloudwick One - Sign In")) {
   @request.flash.get("error").map { msg =>
     <div class="col-md-6 col-md-offset-3 alert alert-danger alert-error">
       <a href="#" class="close" data-dismiss="alert">&times;</a>
